objects/APTS_T_C_Language_Translation__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Customer_Incoterms__c</fullName>
        <label>Customer Incoterms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Customer_Payment_Terms__c</fullName>
        <label>Customer Payment Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Financial_Guarantee__c</fullName>
        <label>Financial Guarantee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Freight_Payment_Terms__c</fullName>
        <label>Freight Payment Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Language_Translation__c</fullName>
        <label>Language Translation</label>
        <referenceTo>APTS_Language_Translation__c</referenceTo>
        <relationshipLabel>T&amp;C Language Translations</relationshipLabel>
        <relationshipName>T_C_Language_Translations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>APTS_Mode_of_Transportation__c</fullName>
        <label>Mode of Transportation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Packing__c</fullName>
        <label>Packing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Payment_Method__c</fullName>
        <label>Payment Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Penalty_Max__c</fullName>
        <label>Penalty Max</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Penalty__c</fullName>
        <label>Penalty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Quality_Control__c</fullName>
        <label>Quality Control</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Quotation__c</fullName>
        <label>Quotation</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>T&amp;C Language Translations</relationshipLabel>
        <relationshipName>T_C_Language_Translations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>APTS_Warranty_Max__c</fullName>
        <label>Warranty Max</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Warranty__c</fullName>
        <label>Warranty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>T&amp;C Language Translation</label>
    <nameField>
        <displayFormat>TCLT-{0000000000}</displayFormat>
        <label>T&amp;C Language Translation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>T&amp;C Language Translations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>